Improve Translation System